# autaxx-nn

./: CMakeLists.txt
src/protocol/uai/: listen.cpp
src/search/tryhard/: classical.cpp  nnue_model.hpp  nnue_util.hpp  reduction.hpp  root.cpp  search.cpp  tryhard.hpp  weights_streamer.hpp
